<resources>
    <string name="app_name">paradiigm-client</string>
    <string name="paradigm">Paradigm</string>
    <string name="active_classes">Active Classes</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="profile_picture">Profile picture</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="tick">tick</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="your_answer">Your answer:</string>
    <string name="q">Q.</string>
    <string name="true1">True</string>
    <string name="false1">False</string>
    <string name="lock">Lock</string>
    <string name="eth_address">ETH Address</string>
    <string name="demo_test">Demo Test</string>
</resources>