<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="questionBlank"
            type="com.vedangj044.paradiigm_client.models.QuestionList" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/question_mark"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/question_text"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                tools:text="___ is an operating system ?  is an operating system ?"
                android:text="@{questionBlank.questionText}"
                app:layout_constraintStart_toEndOf="@id/question_mark"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_1"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_1_text"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{questionBlank.option.get(0)}"
                app:layout_constraintBaseline_toBaselineOf="@id/option_1"
                app:layout_constraintStart_toEndOf="@id/option_1" />

            <ImageView
                android:id="@+id/option_1_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/tick"
                android:visibility="@{questionBlank.correctOption == 1}"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/option_1"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_2"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_1_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_2_text"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{questionBlank.option.get(1)}"
                app:layout_constraintBaseline_toBaselineOf="@id/option_2"
                app:layout_constraintStart_toEndOf="@id/option_2" />

            <ImageView
                android:id="@+id/option_2_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/tick"
                android:visibility="@{questionBlank.correctOption == 2}"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/option_2"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_3"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_2_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_3_text"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{questionBlank.option.get(2)}"
                app:layout_constraintBaseline_toBaselineOf="@id/option_3"
                app:layout_constraintStart_toEndOf="@id/option_3" />

            <ImageView
                android:id="@+id/option_3_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/tick"
                android:visibility="@{questionBlank.correctOption == 3}"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/option_3"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_4"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_3_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/option_4_text"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/none_of_the_above"
                app:layout_constraintBaseline_toBaselineOf="@id/option_4"
                app:layout_constraintStart_toEndOf="@id/option_4" />

            <ImageView
                android:id="@+id/option_4_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/tick"
                android:visibility="@{questionBlank.correctOption == 4}"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/option_4"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/your_andwer"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/your_answer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_4_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:isCorrect="@{questionBlank.response}"
                app:layout_constraintBottom_toBottomOf="@id/your_andwer"
                app:layout_constraintStart_toEndOf="@id/your_andwer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
