<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="testQuestion"
            type="com.vedangj044.paradiigm_client.models.QuestionDemo" />

        <variable
            name="response"
            type="com.vedangj044.paradiigm_client.models.TestReview" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/question_mark"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/question_text_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@{testQuestion.text}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/question_mark"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="___ is an operating system ?  is an operating system ?" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_1_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/question_text_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_1_text_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{testQuestion.option1}"
                    app:layout_constraintBaseline_toBaselineOf="@id/option_1_test"
                    app:layout_constraintStart_toEndOf="@id/option_1_test" />

                <ImageView
                    android:id="@+id/option_1_check_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/tick"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/option_1_test"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_2_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/option_1_text_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_2_text_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{testQuestion.option2}"
                    app:layout_constraintBaseline_toBaselineOf="@id/option_2_test"
                    app:layout_constraintStart_toEndOf="@id/option_2_test" />

                <ImageView
                    android:id="@+id/option_2_check_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/tick"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/option_2_test"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_3_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/option_2_text_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_3_text_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{testQuestion.option3}"
                    app:layout_constraintBaseline_toBaselineOf="@id/option_3_test"
                    app:layout_constraintStart_toEndOf="@id/option_3_test" />

                <ImageView
                    android:id="@+id/option_3_check_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/tick"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/option_3_test"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_4_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/option_3_text_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/option_4_text_test"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{testQuestion.option4}"
                    app:layout_constraintBaseline_toBaselineOf="@id/option_4_test"
                    app:layout_constraintStart_toEndOf="@id/option_4_test" />

                <ImageView
                    android:id="@+id/option_4_check_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/tick"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/option_4_test"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

